# orange-spectroscopy-prototypes

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.pypi  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml  test-addons.yml  test.yml
.travis/: check_pylint_diff  install_orange.sh  install_orange_spec.sh  install_pyqt.sh  stage_script.sh
doc/: conf.py  index.rst
heterodyne_postprocessing/: requirements.txt
heterodyne_postprocessing/processing/: postProcessorCSVSaver.py  postProcessorCalibration.py  postProcessorHDF5.py  postProcessorPlotSpectra.py  postProcessorPlottingUtilities.py
heterodyne_postprocessing/utilities/: IRis-Lens.py  IRis-Lens.spec
orangecontrib/protospec/: __init__.py  data.py  test_tile.py
orangecontrib/protospec/scripts/: spectral_smoothing.py
orangecontrib/protospec/tests/: test_io.py  test_irisf1_reader.py  test_tile_reader.py
orangecontrib/protospec/tutorials/: tile-loader.ows
orangecontrib/protospec/widgets/: __init__.py  owboxplotout.py  owstackalign.py  owtilefile.py
src/heterodyne_postprocessing/: CHANGELOG.md  EvaluatePostProcessing.py  LICENSE  README.txt  __init__.py
src/heterodyne_postprocessing/configurations/: configuration.py  configurationprocessed.py
src/heterodyne_postprocessing/misc/: __init__.py  hdf5Class.py
src/heterodyne_postprocessing/processing/: __init__.py  postProcessor.py  postProcessorAvg.py  postProcessorCSVSaver.py  postProcessorCalibration.py  postProcessorConfigurationMethods.py  postProcessorHDF5.py  postProcessorPlotSpectra.py  postProcessorPlotTransients.py  postProcessorPlottingUtilities.py  postProcessorTimeResolved.py
src/heterodyne_postprocessing/utilities/: IRis-Lens.py  renormalize_TR.py  unnormalize.py
src/orangecontrib/protospec/: data.py
src/orangecontrib/protospec/datasets/: irisf1_v7_0_0_processed_data.h5
src/orangecontrib/protospec/scripts/: .ruff.toml  acquisition_average.py  add_lag_measurement.py  energy_calibration.py  matlab_to_spec_table.py
src/orangecontrib/protospec/tests/: test_io.py
src/orangecontrib/protospec/tutorials/: IRis-F1_Static.ows  IRis-F1_TimeResolved.ows
src/orangecontrib/protospec/widgets/: __init__.py
