[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orange-spectroscopy-prototypes"
description = 'Prototype widgets for orange-spectroscopy add-on'
authors = [
    { name="Stuart Read", email="stuart.read@lightsource.ca"}
]
version = "2025.8.14"
readme = {file = "README.pypi", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
keywords = ["orange3 add-on", "spectroscopy", "prototypes"]
dependencies = [
    "orange-spectroscopy>=0.8.1",
]

[project.optional-dependencies]
doc = [
    "sphinx",
    "recommonmark",
    "sphinx_rtd_theme",
]
test = [
    "pytest",
    "coverage",
]
dev = [
    "pre-commit",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/Quasars/orange-spectroscopy-prototypes"
Issues = "https://github.com/Quasars/orange-spectroscopy-prototypes/issues"

[project.entry-points."orange3.addon"]
protospec = "orangecontrib.protospec"

[project.entry-points."orange.widgets.tutorials"]
"Spectroscopy Prototypes Examples" = "orangecontrib.protospec.tutorials"

[project.entry-points."orange.widgets"]
"Spectroscopy Prototypes" = "orangecontrib.protospec.widgets"

[project.entry-points."orange.canvas.help"]
html-index = "orangecontrib.protospec.widgets:WIDGET_HELP_PATH"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = ['heterodyne_postprocessing']
force-exclude = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "UP"]

[tool.ruff.format]
quote-style = "preserve"
